--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/core": "^10.0.35",
     "next": "9.5.5",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "react-spring": "^8.0.27"
   }
 }
