--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.9",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.1.2"
   }
 }
