--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-spring": "^8.0.27",
+    "react-toggle": "^4.1.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.4",
     "typescript": "^4.1.2"
   }
 }
