--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "dependencies": {
     "@emotion/core": "^10.0.35",
+    "@emotion/react": "^11.1.4",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.9",
-    "@types/react": "^17.0.0",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "next": "9.5.5",
     "react": "16.14.0",
