--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "9.5.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-responsive": "^8.2.0",
     "react-spring": "^8.0.27",
     "react-switch": "^5.0.1",
     "styled-components": "^5.2.1"
